--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "motion": "^12.23.26",
     "next": "16.0.6",
     "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "resend": "^6.6.0"
+    "react-dom": "19.2.0"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
