--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "biome check",
     "format": "biome format --write"
@@ -12,6 +13,7 @@
   "dependencies": {
     "motion": "^12.23.26",
     "next": "16.0.6",
+    "next-sitemap": "^4.2.3",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
