--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "postbuild": "next-sitemap && mkdir public && copy out\\sitemap.xml public\\sitemap.xml && copy out\\robots.txt public\\robots.txt",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "biome check",
     "format": "biome format --write"
