--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@next/third-parties": "^16.1.1",
     "motion": "^12.23.26",
     "next": "16.0.10",
     "next-sitemap": "^4.2.3",
